2020-05-18  Karl Berry  <karl@freefriends.org>

	* configure.ac ([m]): check for erf, not sqrt; the latter may
	be implemented in hardware, so that -lm is wrongly concluded to be
	unnecessary. E.g., on Solaris. Report from Nelson Beebe.

2019-01-09  Luigi Scarso  <luigi.scarso@gmail.com>

	* configure.ac: Enable pdf surface.

2018-10-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import cairo-1.16.0.
	* version.ac: Adapted.

2017-12-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import cairo-1.14.12.
	* version.ac: Adapted.

2017-06-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import cairo-1.14.10.
	* version.ac: Adapted.

2016-12-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import cairo-1.14.8.
	* version.ac: Adapted.

2016-02-15  Karl Berry  <karl@tug.org>

	* cairo-PATCHES: rename from cairo-src-PATCHES.
	* Makefile.am (EXTRA_DIST): likewise.

2015-12-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import cairo-1.14.6.
	* configure.ac: new source-tree-naming convention per Karl.
	* version.ac: Adapted.

2015-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-03-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import cairo-1.14.2.
	* Makefile.am, version.ac: Adapted.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-12-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Added KPSE_COMPILER_VISIBILITY.
	* Makefile.am [AM_CFLAGS]: Added $(VISIBILITY_CFLAGS).

2014-10-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import cairo-1.14.0.
	* Makefile.am, version.ac: Adapted.

2014-02-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use -Wno-attributes only for gcc Version 4.2 and
	better (unsupported in 4.0.1).

2013-10-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac, cairo/Makefile.am: Prepare for SVG.

2013-10-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cairotst.c: Print more info.
