@@ -1,3 +1,9 @@
+2021-02-28  David Seifert  <soap@gentoo.org>
+
+	* m4/float.m4: allow users to override 'strings', e.g.,
+	with llvm-strings or for cross-compiling.
+	https://bugs.gentoo.org/730714
+
 2020-05-18  Karl Berry  <karl@freefriends.org>
 
 	* configure.ac ([m]): check for erf, not sqrt; the latter may
